2001-05-08  Tom Tromey  <tromey@redhat.com>

	* automake.in (conditional_true_when): Don't return if we see
	`TRUE'.

	* tests/objc.test: Removed.
	* tests/Makefile.am (XFAIL_TESTS): Removed objc.test.
	(TESTS): Likewise.

	* automake.in (subst): New sub.
	(handle_languages): Use it.
	(output_lex_build_rule): Likewise; also use _am_quote.
	(check_libobjs_sources): Likewise.
	(make_paragraphs): Use subst.

	* automake.in (check_libobjs_sources): Re-fixed AMDEP_TRUE
	problem.

	* automake.in (file_contents_internal): Prototype now `$$%'.
	(register_language): Prototype now `%'.

	Fixes test subobj6.test and PR automake/160:
	* tests/Makefile.am (XFAIL_TESTS): Removed subobj6.test.
	* compile.am (mostlyclean-compile): Added MOSTLYRMS.
	(distclean-compile): Added DISTRMS.
	* tests/subobj6.test (wish_SOURCES): Updated to reflect
	`mostlyclean' use; added test for non-subdir case.
	* automake.in (compile_clean_files): New global.
	(MOSTLY_CLEAN, DIST_CLEAN): New constants.
	(initialize_per_input): Initialize compile_clean_files.
	(handle_single_transform_list): Set compile_clean_files entries.
	(handle_compile): Handle compilation cleanups.

2001-05-08  Lars J. Aas  <larsa@sim.no>

	* automake.texi (Canonicalizing Automake macros): Document not
	canonicalizing strudels (@) anymore.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* distdir.am (dist-all): Build all the flavors using a single
	distdir.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents_internal): Apply the @cond_stack to
	the rules and assignments.
	Don't rely on `$.' as it's biased by &make_paragraphs.
	Don't remove backslashes in variable values.

2001-05-08  Akim Demaille  <akim@epita.fr>

	* automake.in ($IGNORE_PATTERN): Improve for multi-line matches.
	($RULE_PATTERN): Use that from `&make_paragraphs'.
	($MACRO_PATTERN): Just catch the name of a macro.
	($BOGUS_MACRO_PATTERN): Remove.
	($ASSIGNMENT_PATTERN): New.
	(&file_contents_internal, &make_paragraphs): Adjust.