@@ -1,0 +1,11 @@
+#! /bin/sh
+
+# Test to make sure --Werror and --add-missing work together.
+
+. $srcdir/defs || exit 1
+
+: > Makefile.am
+
+rm install-sh depcomp missing mkinstalldirs
+
+$AUTOMAKE --Werror --add-missing
