@@ -1,5 +1,10 @@
 2001-05-08  Tom Tromey  <tromey@redhat.com>
 
+	For PR automake/149:
+	* tests/Makefile.am (TESTS): Added werror.test.
+	(XFAIL_TESTS): Likewise.
+	* tests/werror.test: New file.
+
 	* automake.in (conditional_true_when): Don't return if we see
 	`TRUE'.
 
